<?xml version="1.0"?>
<package format="3">
  <name>so100_ros_controller</name>
  <version>0.0.0</version>
  <description>so100 control with ROS 2 and MuJoCo</description>
  <maintainer email="srikrishna.rameshiyer@stengg.com">Srikrishna</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>position_controllers</depend>

  <export>
     <build_type>ament_cmake</build_type>
   </export>

  
</package>